--- a/messaging-platform/package.json
+++ b/messaging-platform/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "classlist.js": "^1.1.20150312",
     "express": "^4.17.1",
     "formik": "^2.2.6",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-icons": "^1.2.2",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
