--- a/messaging-platform/package.json
+++ b/messaging-platform/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
     "classlist.js": "^1.1.20150312",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^8.2.6",
     "formik": "^2.2.6",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
