--- a/messaging-platform/package.json
+++ b/messaging-platform/package.json
@@ -20,6 +20,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-simple-hook-modal": "^1.1.0",
+    "socket.io": "^3.1.1",
     "socket.io-client": "^3.1.1",
     "web-vitals": "^0.2.4"
   },
