--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^9.5.0",
+    "heroku-addons": "^0.4.0",
     "mongodb": "^3.6.3",
     "socket.io": "^3.1.1"
   },
